# Multi-Agent-Collaboration-for-Automated-Data-Science-Workflows

./: .gitignore  README.md  main.py  pyproject.toml  run_crew.py  tasks.txt
artifacts/: X_test_scaled.csv  X_train_scaled.csv  X_valid_scaled.csv  ba_report.md  cleaned_house_prices_train.csv  da_report.md  ds_report.md  feature_list.csv  final_crispdm_report.md  model_summary_report.txt  notes.csv  pipeline_design.md
configs/: crew.py
crips_dm_crew/: README.md  pyproject.toml
crips_dm_crew/artifacts/: ba_report.md  da_report.md  ds_report.md  final_crispdm_report.md  pipeline_design.md
crips_dm_crew/src/: main.py
crips_dm_crew/src/crisp_dm_crew/config/: agents.yaml  tasks.yaml
generated_code/: data_analysis.py  data_analysis_v2.py
multi_agents/: business_analyst.py
src/: main.py
src/au_ds_agents/: crew.py  main.py
src/auto_ds_agents/: crew.py  main.py
src/auto_ds_agents/config/: agents.yaml  tasks.yaml
src/multi_agent/: crew.py  model.py
src/multi_agent/config/: agents.yaml  tasks.yaml
tests/: test.py
