[project]
name = "multi_agent"
version = "0.1.0"
description = "multi_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
multi_agent = "multi_agent.main:run"
run_crew = "multi_agent.main:run"
train = "multi_agent.main:train"
replay = "multi_agent.main:replay"
test = "multi_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
