[project]
name = "au_ds_agents"
version = "0.1.0"
description = "au-ds-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
au_ds_agents = "au_ds_agents.main:run"
run_crew = "au_ds_agents.main:run"
train = "au_ds_agents.main:train"
replay = "au_ds_agents.main:replay"
test = "au_ds_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
