[project]
name = "auto_ds_agents"
version = "0.1.0"
description = "au-ds-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
auto_ds_agents = "auto_ds_agents.main:run"
run_crew = "auto_ds_agents.main:run"
train = "auto_ds_agents.main:train"
replay = "auto_ds_agents.main:replay"
test = "auto_ds_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
